@fix: desktop overflow and shutdown icon

--- a/components/Desktop/Desktop.module.css
+++ b/components/Desktop/Desktop.module.css
@@ -9,4 +9,5 @@
   justify-content: flex-start;
   align-content: flex-start;
   gap: 15px;
+  overflow: hidden;
 }
